Update button hover state to have gradient

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             </div>
           </div>
           <button
-            class="bg-DarkGrayBlue text-White rounded-full hover:bg-CobaltBlue leading-4 px-8 py-4 border-0"
+            class="bg-DarkGrayBlue text-White rounded-full hover:bg-gradient-to-r from-purple-600 to-indigo-600 leading-4 px-8 py-4 border-0"
           >
             Continue
           </button>
